fixed spacing on landing pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,6 +45,11 @@ a:hover {
   padding: 0;
 }
 
+.margins {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .btn-standard {
   background-color: #E76F51
 }
@@ -141,6 +146,7 @@ nav {
 
 .divspan {
   min-height: 100%;
+  margin-top: 10px;
   padding-top: 358px;
   padding-bottom: 357px;
   background-repeat: no-repeat;
@@ -149,8 +155,9 @@ nav {
 }
 .divspan2 {
   min-height: 100%;
+  margin-top: 10px;
   padding-top: 300px;
-  padding-bottom: 322px;
+  padding-bottom: 298px;
   background-repeat: no-repeat;
   background-position: top center;
   background-size: 100%;
@@ -158,6 +165,7 @@ nav {
 
 .divspan3 {
   min-height: 100%;
+  margin-top: 10px;
   padding-top: 0px;
   padding-bottom: 0px;
   background-repeat: no-repeat;
